k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: client
  template:
    metadata:
      labels:
        component: client
    spec:
      containers:
        - name: client
          image: system-monitor-frontend:v1
          imagePullPolicy: Never # Use local image, do not pull from registry
          ports:
            - containerPort: 5173
