k8s/chroma-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chroma-service
spec:
  type: ClusterIP
  selector:
    component: chromadb
  ports:
    - port: 8000
      targetPort: 8000
