k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
   - http:
       paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: client-service
              port:
                number: 80
